<resources>
    <string name="app_name">ArmoniaSkills</string>
    <string name="inicio">Inicio</string>
    <string name="mi_perfil">Perfil</string>
    <string name="mi_balance">Balance</string>
    <string name="chat">Chat</string>
    <string name="nuevo">Nuevo</string>
    <string name="barra_buscar">Buscar</string>
    <string name="eliminar_hist">Borrar historial</string>
    <string name="btn_depositar">Depositar</string>
    <string name="btn_retirar">Retirar</string>
    <string name="nueva_skill">Nueva Skill</string>
    <string name="hint_et_titulo">Título*</string>
    <string name="tv_categoria">Seleccione una categoria:</string>
    <string name="login_bienvenida">Bienvenido a</string>
    <string name="introduce_tu_email">Introduce tu email</string>
    <string name="introduce_tu_contra">Introduce tu contraseña</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="btn_reg">Registrar nueva cuenta</string>
    <string name="campos_obligatorios">Debe introducir todos los campos obligatorios (*)</string>
    <string name="err_login">Email o contraseña incorrectos</string>
    <string name="err_servidor">Error de conexión con el servidor</string>
    <string name="err_desconocido">Error desconocido</string>
    <string name="ok_login">Sesión iniciada</string>
    <string name="tv_registro">Registro</string>
    <string name="btn_crear_cuenta">Crear cuenta</string>
    <string name="hint_et_telefono">Número de tlf. (Opcional)</string>
    <string name="hint_et_contra">Contraseña*</string>
    <string name="hint_et_email">Correo electrónico*</string>
    <string name="hint_et_nombre">Nombre*</string>
    <string name="hint_et_nombre_usuario">Nombre de usuario*</string>
    <string name="hint_et_ape">Apellidos*</string>
    <string name="registro_correcto">Cuenta registrada</string>
    <string name="registro_incorrecto">Error al crear cuenta</string>
    <string name="error_conexion">Error al conectar con el servidor</string>
    <string name="err_sesion_expirada">Sesión expirada, vuelve a iniciar sesión</string>
    <string name="tv_perfil">Perfil</string>
    <string name="cambiar_datos">Cambiar datos</string>
    <string name="btn_actualizar_datos">Actualizar datos</string>
    <string name="btn_cambiar_contrasenia">Cambiar contraseña</string>
    <string name="hint_et_repcontra">Repetir contraseña</string>
    <string name="btn_cerrar_sesion">Cerrar sesión</string>
    <string name="seleccionar_img">No se ha seleccionado ninguna imagen</string>
    <string name="dialog_msg_perfil">¿Estas seguro de que quieres cerrar la sesión?</string>
    <string name="btn_aceptar_d">Aceptar</string>
    <string name="btn_cancelar_d">Cancelar</string>
    <string name="hint_et_username">Nombre de usuario*</string>
    <string name="contra_obligatoria">Debe introducir una contraseña para cambiarla</string>
    <string name="rep_contra_obligatoria">Debe repetir la contraseña</string>
    <string name="contra_no_coinciden">Las contraseñas no coinciden</string>
    <string name="tlf_invalido">El número de teléfono es inválido</string>
    <string name="contra_actualizada">Contraseña actualizada correctamente.</string>
    <string name="datos_actualizados">Datos actualizados correctamente</string>
    <string name="usuario_existente">El nombre de usuario ya existe.</string>
    <string name="categoria1">Diseño grafico</string>
    <string name="categoria2">Marketing digital</string>
    <string name="categoria3">Animación &amp; Video</string>
    <string name="categoria4">Música &amp; Audio</string>
    <string name="categoria5">Programación &amp; Tecnologia</string>
    <string name="categoria6">Negocios</string>
    <string name="categoria7">Fotografía</string>
    <string name="categoria8">Construcción &amp; Reformas</string>
    <string name="categoria9">Hogar</string>
    <string name="categoria10">Eventos</string>
    <string name="categoria11">Transporte</string>
    <string name="categoria12">Belleza &amp; bienestar</string>
    <string name="categoria13">Reparaciones</string>
    <string name="categoria14">Clases &amp; apoyo</string>
    <string name="categoria15">Comida &amp; bebida</string>
    <string name="categoria16">Asesoría financiera</string>
    <string name="categoria17">Salud</string>
    <string name="categoria18">Mascotas</string>
    <string name="categoria19">Automoción</string>
    <string name="categoria20">Entretenimiento</string>
    <string name="categoria21">Turismo</string>
    <string name="categoria22">Otros</string>
    <string name="err_imagen_servidor">No se ha podido subir la imagen seleccionada</string>
    <string name="skill_creada">Skill creada con exito</string>
    <string name="error_creacion_skill">Error al crear la skill</string>
    <string name="historial_retiro">Has retirado %1$.2f€</string>
    <string name="historial_ingreso">Has ingresado %1$.2f€</string>
    <string name="historial_pagado">Has pagado %1$.2f€</string>
    <string name="config">Configuración de la Skill</string>
    <string name="tv_precio_inicio" translatable="false">%1$.2f€</string>
    <string name="tv_retirar">¿Cuanto dinero quiere retirar?</string>
    <string name="hint_et_cantidad">Cantidad</string>
    <string name="cantidad_disponible">Cantidad disponible: %1$.2f€</string>
    <string name="cantidad_obligatoria">Debe introducir una cantidad</string>
    <string name="tv_deposito">¿Cuanto dinero quiere depositar?</string>
    <string name="btn_chat">Chat</string>
    <string name="ok_deposito">Dinero depositado con éxito.</string>
    <string name="err_deposito">Error al depositar dinero.</string>
    <string name="ok_retirar">Dinero retirado con éxito.</string>
    <string name="err_retirar">Error al retirar el dinero.</string>
    <string name="tvAniadirVal">Envía tu valoración</string>
    <string name="tv_estrellas">%1$d</string>
    <string name="tv_media_reviews"> (%1$d)</string>
    <string name="tit_valoraciones">Valoraciones de %1$s</string>
    <string name="editar_skill">Editar Skill</string>
    <string name="hint_et_descripcion">Descripción*</string>
    <string name="hint_et_precio">Precio*</string>
    <string name="btn_eliminar">Eliminar Skill</string>
    <string name="dialog_msg_eliminar">¿Desea eliminar la Skill definitivamente?</string>
    <string name="btn_eliminar_d">Eliminar</string>
    <string name="no_reviews">" (0)"</string>
    <string name="otro_error">Error desconocido</string>
    <string name="error_balance">Error al recuperar el balance</string>
    <string name="error_mensajes">Error al recuperar el historial de mensajes</string>
    <string name="error_chat">Error al recuperar los chats</string>
    <string name="error_skills">Error al recuperar las skills</string>
    <string name="valoracion">¡Gracias por valorar su experiencia!</string>
    <string name="error_crear_chat">Error en la creación del chat</string>
    <string name="error_usuario">Error al cargar usuario</string>
    <string name="img_obligatoria">Debe seleccionar al menos una imagen</string>
    <string name="titulo_obligatorio">Debe introducir un título</string>
    <string name="descripcion_obligatoria">Debe introducir una descripción</string>
    <string name="precio_obligatorio">Debe introducir un precio</string>
    <string name="tv_info_basica">Información básica</string>
    <string name="tit_categoria">Categoría</string>
    <string name="btn_subir_skill">Guardar Skill</string>
    <string name="btn_eliminar_skill">Eliminar Skill</string>
    <string name="valora_tu_experiencia">Valora tu experiencia</string>
    <string name="pulsa_estrellas">Pulsa en las estrellas para dejar tu valoración. A más estrellas, mejor experiencia</string>
    <string name="hint_et_comentario">¡Deja un comentario!</string>
    <string name="btn_enviar">Enviar valoración</string>
    <string name="btn_contratar_skill">Contratar Skill</string>
    <string name="skills">Skills</string>
    <string name="opiniones">Valoraciones</string>
    <string name="categoria0">Todas</string>
    <string name="yesterday">Ayer</string>
    <string name="weeks_ago">Hace %1$d semanas</string>
    <string name="skill_eliminada">Skill eliminada con éxito</string>
    <string name="error_eliminar_skill">Error al eliminar Skill</string>
    <string name="email_invalido">El email introducido no es válido</string>
    <string name="skill_actualizada">Skill actualizada con éxito</string>
    <string name="error_carrito_vacio">Sin compras</string>
    <string name="error_compra">Error al contratar la skill</string>
    <string name="compra_correcta">Skill contratada</string>
    <string name="euro" translatable="false">€</string>
    <string name="tienes_una_nueva_venta">¡Tienes una nueva venta!</string>
    <string name="tienes_una_nueva_compra">¡Has realizado una compra!</string>
    <string name="aceptar_venta">Pendiente</string>
    <string name="aceptar_venta_info">El vendedor está pendiente de aceptar la venta.</string>
    <string name="rechazar_venta">Rechazado</string>
    <string name="rechazar_venta_info">El vendedor ha rechazado la venta</string>
    <string name="preparando_venta">Preparando</string>
    <string name="preparando_venta_info">El vendedor ha aceptado la venta y está preparando tu pedido</string>
    <string name="completar_venta">Completado</string>
    <string name="completar_venta_info">El comprador ha recibido el pedido</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="comprar_skill">Contratar skill</string>
    <string name="compra_correcta_mensaje">Al pulsar aceptar, aceptas que se te cobre nuestro seguro de reembolso de 2,99€, para devolver el producto en caso de que no sea correcto</string>
    <string name="saldo_insuficiente">Saldo insuficiente</string>
    <string name="enviado_venta">Enviado</string>
    <string name="enviado_venta_info">El vendedor ha enviado el producto</string>
    <string name="error_token">Error al registrar token FCM</string>
    <string name="todos">Todos</string>
    <string name="notification_title">Activar notificaciones</string>
    <string name="notification_message">Las notificaciones push están deshabilitadas. ¿Le gustaría habilitarlas?</string>
    <string name="tv_ventas">Ventas</string>
    <string name="no_venta">No tienes ningúna venta</string>
    <string name="tv_compras">Compras</string>
    <string name="no_compra">No tienes ningúna compra</string>
    <string name="el_usuario_ha_contratado_la_skill">• El usuario ha contratado la skill</string>
    <string name="pendiente_de_aceptar">• Pendiente de aceptar</string>
    <string name="rechazado">• Rechazado</string>
    <string name="contratado">• Contratado</string>
    <string name="preparando">• Preparando</string>
    <string name="completado">• Completado</string>
    <string name="enviado">Enviado</string>
    <string name="skills_no_encontradas">No se han econtrado Skills con los filtros indicados</string>
    <string name="pendiente">Pendiente</string>
    <string name="aceptado">Aceptado</string>
</resources>