<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/botNavVarHome"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/inicio" />
    <item
        android:id="@+id/botNavVarChat"
        android:enabled="true"
        android:icon="@drawable/baseline_chat_24"
        android:title="@string/chat" />

    <item
        android:id="@+id/botNavVarAdd"
        android:enabled="true"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/nuevo" />

    <item
        android:id="@+id/botNavVarBalance"
        android:enabled="true"
        android:icon="@drawable/baseline_account_balance_wallet_24"
        android:title="@string/mi_balance" />
    <item
        android:id="@+id/botNavVarPerfil"
        android:enabled="true"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/mi_perfil" />
</menu>